Multiply: improve SCARL mesh by folding down iron sights

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -183,27 +183,27 @@ MRUItem11=/Game/Maps/Red/Map_Red_1
 LastLevel=/Game/Levels/Opalseed
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
@@ -1025,6 +1025,7 @@ TextureImportSettings.VirtualTextures=True
 TextureImportSettings.ImportSettings=True
 UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
@@ -2996,8 +2997,8 @@ MaterialExpressionPower.MaterialExpressionPower=True
 MaterialExpressionPower.MaterialExpression=True
 MaterialExpressionAdd.MaterialExpressionAdd=True
 MaterialExpressionAdd.MaterialExpression=True
+Texture2D.Interchange=True
 UMGEditorProjectSettings.Designer =True
-Texture2D.Interchange =True
 
 [RootWindow]
 ScreenPosition=X=438.000 Y=243.000
@@ -4128,25 +4129,25 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/hu/Firearms/SCARL/M_FDE/M_Tactical_Light_Insight_FDE
-MRUItem1=/Game/hu/Firearms/SCARL/M_FDE/M_Tactical_Laser_EOTECH_OGL_FDE
-MRUItem2=/Game/hu/Firearms/SCARL/M_BLK/M_SCARL_Receiver_Lower_BLK
-MRUItem3=/Game/hu/Firearms/SCARL/M_BLK/M_SCARL_Receiver_Upper_BLK
-MRUItem4=/Game/hu/Firearms/SCARL/M_FDE/M_SCARL_Receiver_Upper_FDE
-MRUItem5=/Game/hu/Firearms/SCARL/SK_SCARL_BLK
-MRUItem6=/Game/hu/Firearms/SCARL/SK_SCARL_FDE
-MRUItem7=/Game/hu/Firearms/SCARL/Textures/ROMEO8T_red_dot/ROMEO8T_red_dot_FDE_OcclusionRoughnessMetallic
-MRUItem8=/Game/hu/Firearms/SCARL/M_BLK/M_Tactical_Light_Insight_BLK
-MRUItem9=/Game/hu/Firearms/SCARL/M_Shared/M_Ammo_556_m855a1
-MRUItem10=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_Pickup_AmericanRifle
-MRUItem11=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
-MRUItem12=/Game/hu/Firearms/SCARL/M_BLK/M_Foregrip_HK_BLK
-MRUItem13=/Game/bodycamFPSkit/Maps/Map_Lobby
-MRUItem14=/Game/AAAModularSoldier/Maps/TestLevel
-MRUItem15=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
-MRUItem16=/Game/Levels/Opalseed
-MRUItem17=/Game/Levels/Black/L_Black_Arsenal_Armor
-MRUItem18=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_AmericanRifle
+MRUItem0=/Game/hu/Firearms/SCARL/SK_SCARL_FDE
+MRUItem1=/Game/hu/Firearms/SCARL/SK_SCARL_BLK
+MRUItem2=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_AmericanRifle
+MRUItem3=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
+MRUItem4=/Game/hu/Firearms/SCARL/M_FDE/M_Tactical_Light_Insight_FDE
+MRUItem5=/Game/hu/Firearms/SCARL/M_FDE/M_Tactical_Laser_EOTECH_OGL_FDE
+MRUItem6=/Game/hu/Firearms/SCARL/M_BLK/M_SCARL_Receiver_Lower_BLK
+MRUItem7=/Game/hu/Firearms/SCARL/M_BLK/M_SCARL_Receiver_Upper_BLK
+MRUItem8=/Game/hu/Firearms/SCARL/M_FDE/M_SCARL_Receiver_Upper_FDE
+MRUItem9=/Game/hu/Firearms/SCARL/Textures/ROMEO8T_red_dot/ROMEO8T_red_dot_FDE_OcclusionRoughnessMetallic
+MRUItem10=/Game/hu/Firearms/SCARL/M_BLK/M_Tactical_Light_Insight_BLK
+MRUItem11=/Game/hu/Firearms/SCARL/M_Shared/M_Ammo_556_m855a1
+MRUItem12=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_Pickup_AmericanRifle
+MRUItem13=/Game/hu/Firearms/SCARL/M_BLK/M_Foregrip_HK_BLK
+MRUItem14=/Game/bodycamFPSkit/Maps/Map_Lobby
+MRUItem15=/Game/AAAModularSoldier/Maps/TestLevel
+MRUItem16=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
+MRUItem17=/Game/Levels/Opalseed
+MRUItem18=/Game/Levels/Black/L_Black_Arsenal_Armor
 MRUItem19=/Game/hu/Firearms/SCARL/M_BLK/M_Muzzle_Silencer_AAC_SDN_BLK
 MRUItem20=/Game/hu/Firearms/SCARL/M_BLK/M_Tactical_Laser_EOTECH_OGL_BLK
 
@@ -4163,7 +4164,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/hu/Firearms/SCARL
+ContentBrowserDrawer.SelectedPaths=/Game/hu/Firearms/SCARL/M_FDE
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -4519,7 +4520,7 @@ MaterialExpressionAdd="\"Object\" "
 BP_Pickup_Pistol_Glock_Lowpoly_C="\"Object.WeaponVars.WeaponStats\" "
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=FBXImport
 
 [WidgetTemplatesExpanded]
 Audio=False
@@ -5574,13 +5575,13 @@ TakeRecorderMicrophoneAudioManager=
 MovieSceneAnimationTrackRecorderEditorSettings=
 TakeRecorderWorldSourceSettings=
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
 StaticMeshActor=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 LandscapeStreamingProxy=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 SphereComponent=
 LevelStreamingVolume=BoxComponent.Collision.Collision
 BrushComponent=
-SkeletalMeshComponent=
+SkeletalMeshComponent=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 BP_FirstPersonCharacter_C=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 CapsuleComponent=
 BP_Weapon_Base_C=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
