Multiply: SA-58 base mesh for modularity with attachment system

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -184,40 +184,38 @@ MRUItem11=/Game/Maps/Red/Map_Red_1
 LastLevel=/Game/Levels/Opalseed
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=PhysicsAssetEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=PhysicsAssetEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=SkeletonEditor
+RecentAssetEditors=SkeletonEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=PhysicsAssetEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=StaticMeshEditor
 OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Pickup_Weapon_SA58.BP_Pickup_Weapon_SA58
 OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_SA58.BP_Weapon_SA58
-OpenAssetsAtExit=/Game/Weapons/SA58/forwardtrigger/SA_58_rigg3d_forwardtrigger.SA_58_rigg3d_forwardtrigger
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -3437,7 +3435,7 @@ UNR=../../../../../../Users/bryanat/Documents/Unreal Projects/cashu_devbranch/Co
 BRUSH=../../../../../../Users/bryanat/Documents/Unreal Projects/cashu_devbranch/Content/
 FBX=../../../../../../Users/bryanat/Documents/Unreal Projects/cashu_devbranch/Content/
 FBXAnim=../../../../../../Users/bryanat/Documents/Unreal Projects/cashu_devbranch/Content/
-GenericImport=../../../../../../Users/bryanat/Documents/uassets/Rifle_BUNDLE/tactical-modular-assault-rifle-ds-arms-sa-58-fal/Autodesk_FBX/SA_58/SA_58_rigged2.fbx
+GenericImport=../../../../../../Users/bryanat/Documents/uassets/Rifle_BUNDLE/tactical-modular-assault-rifle-ds-arms-sa-58-fal/Autodesk_FBX/SA_58/SA_58_base_rigg5d.fbx
 GenericExport=../../../../../../Users/bryanat/Documents/uassets/Rifle_BUNDLE/tactical-modular-assault-rifle-fn-scar-l-mk-16/Autodesk_FBX/SK_AmericanRifle_Mesh.FBX
 GenericOpen=../../../../../../Users/bryanat/Documents/Unreal Projects/cashu_devbranch/Content/
 GenericSave=../../../../../../Users/bryanat/Documents/Unreal Projects/cashu_devbranch/Content/
@@ -4532,35 +4530,34 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Weapons/SA58/SA_58_rigg3d_forwardtrigger
-MRUItem1=/Game/Weapons/SA58/M_SA58_BLK/sa_58_buttstock_BRS
-MRUItem2=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Pickup_Weapon_SA58
-MRUItem3=/Game/Weapons/SA58/M_SA58_BLK/sa_58_buttstock_BRS_adapter
-MRUItem4=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_SA58
-MRUItem5=/Game/Weapons/SA58/SK_SA58
-MRUItem6=/Game/Weapons/SA58/M_SA58_BLK/sa_58_charging_handle
-MRUItem7=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_AmericanRifle
-MRUItem8=/Game/Weapons/SA58/M_SA58_BLK/Thor_PSR_Suppressor
-MRUItem9=/Game/Weapons/SA58/M_SA58_BLK/sa_58_receiver
-MRUItem10=/Game/Weapons/SA58/M_SA58_BLK/sa_58_handguard
-MRUItem11=/Game/Weapons/SA58/M_SA58_BLK/sa_58_fab_defence_grip
-MRUItem12=/Game/Weapons/SA58/M_SA58_BLK/magpul_RVG
-MRUItem13=/Game/Weapons/SA58/M_SA58_BLK/Geissele_scope_mount_with_RMR_redDOT
-MRUItem14=/Game/Weapons/SA58/M_SA58_BLK/ammo_762_m993
-MRUItem15=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_AK704
-MRUItem16=/Game/Weapons/Foregrip/M_Foregrip_HK_SCAR/M_Foregrip_HK_BLK
-MRUItem17=/Game/Weapons/AK704/SK_AK704_BLK
-MRUItem18=/Game/Weapons/SA58FAL/first/ammo_762_m993
-MRUItem19=/Game/Weapons/Magazine/M_Magazine_FABdefense_Ultimag30_AK704/M_Magazine_FABdefense_Ultimag30_AK704
-MRUItem20=/Game/Weapons/AK704/M_AK704_BLK/scope_BRAVO4
-MRUItem21=/Game/Weapons/AK704/tm0/RD-704_GroupedPart
-MRUItem22=/Game/Weapons/AK704/M_AK704_BLK/M_AK704_Stock_Magpul_Zhukov
-MRUItem23=/Game/Weapons/AK704/M_AK704_BLK/M_AK704_Handguard
-MRUItem24=/Game/Weapons/Foregrip/M_Foregrip_BCMGunfighter_AK704/M_Foregrip_BCMGunfighter_AK704
-MRUItem25=/Game/Weapons/AK704/tmp/RD-704_GroupedPart
-MRUItem26=/Game/Weapons/Foregrip/tactical_grip_BCM_GUNFIGHTER
-MRUItem27=/Game/Weapons/Pistolgrip/M_Pistolgrip_Scorpius_AK704/M_Pistolgrip_Scorpius_AK704
-MRUItem28=/Game/Weapons/Pistolgrip/SM_Pistolgrip_Scorpius_AK704
+MRUItem0=/Game/Weapons/SA58/SK_SA58_Attached
+MRUItem1=/Game/Weapons/SA58/SK_SA58
+MRUItem2=/Game/Weapons/AK704/PHYS_AK704
+MRUItem3=/Game/Weapons/AK704/SK_AK704
+MRUItem4=/Game/Weapons/SA58/PHYS_SA58
+MRUItem5=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_SA58
+MRUItem6=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Pickup_Weapon_SA58
+MRUItem7=/Game/Weapons/SA58/SKEL_SA58_Attached
+MRUItem8=/Game/Weapons/SA58/SKEL_SA58
+MRUItem9=/Game/Weapons/SA58/M_SA58_BLK/Thor_PSR_Suppressor
+MRUItem10=/Game/Weapons/SA58/M_SA58_BLK/Thor_PSR_Muzzlebrake
+MRUItem11=/Game/Weapons/SA58/PHYS_SA58_Attached
+MRUItem12=/Game/Weapons/SA58/M_SA58_BLK/Geissele_scope_mount_with_RMR_redDOT
+MRUItem13=/Game/Weapons/SA58/M_SA58_BLK/sa_58_buttstock_BRS
+MRUItem14=/Game/Weapons/SA58/M_SA58_BLK/sa_58_buttstock_BRS_adapter
+MRUItem15=/Game/Weapons/SA58/M_SA58_BLK/sa_58_charging_handle
+MRUItem16=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_AmericanRifle
+MRUItem17=/Game/Weapons/SA58/M_SA58_BLK/sa_58_receiver
+MRUItem18=/Game/Weapons/SA58/M_SA58_BLK/sa_58_handguard
+MRUItem19=/Game/Weapons/SA58/M_SA58_BLK/sa_58_fab_defence_grip
+MRUItem20=/Game/Weapons/SA58/M_SA58_BLK/magpul_RVG
+MRUItem21=/Game/Weapons/SA58/M_SA58_BLK/ammo_762_m993
+MRUItem22=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_AK704
+MRUItem23=/Game/Weapons/Foregrip/M_Foregrip_HK_SCAR/M_Foregrip_HK_BLK
+MRUItem24=/Game/Weapons/Magazine/M_Magazine_FABdefense_Ultimag30_AK704/M_Magazine_FABdefense_Ultimag30_AK704
+MRUItem25=/Game/Weapons/AK704/M_AK704_BLK/scope_BRAVO4
+MRUItem26=/Game/Weapons/AK704/tm0/RD-704_GroupedPart
+MRUItem27=/Game/Weapons/AK704/M_AK704_BLK/M_AK704_Stock_Magpul_Zhukov
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -4575,7 +4572,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Weapons
+ContentBrowserDrawer.SelectedPaths=/Game/Weapons/SA58
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -4994,7 +4991,7 @@ BP_Weapon_Pickup_SA58FAL_C="\"Object.WeaponVars.WeaponStats\" "
 BP_Pickup_Weapon_SA58_C="\"Object.WeaponVars.WeaponStats\" "
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=FBXImport
 
 [WidgetTemplatesExpanded]
 Audio=False
@@ -5527,6 +5524,18 @@ TreeViewWidth=0.300000
 /Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_SA58.BP_Weapon_SA58=0
 /Game/Weapons/SA58/M_SA58_BLK/sa_58_buttstock_BRS_adapter.sa_58_buttstock_BRS_adapter=0
 /Game/Weapons/SA58/matchingtrigger/SA_58_rigg3d_matchingtrigger.SA_58_rigg3d_matchingtrigger=0
+/Game/Weapons/SA58/M_SA58_BLK/Geissele_scope_mount_with_RMR_redDOT.Geissele_scope_mount_with_RMR_redDOT=0
+/Game/Weapons/SA58/xxxx.xxxx=1
+/Game/Weapons/SA58/PHYS_SA58.PHYS_SA58=1
+/Game/Weapons/SA58/SKEL_SA58.SKEL_SA58=1
+/Game/Weapons/SA58/SA58Base/SA_58_base_rigg4d_PhysicsAsset.SA_58_base_rigg4d_PhysicsAsset=1
+/Game/Weapons/SA58/M_SA58_BLK/Thor_PSR_Suppressor.Thor_PSR_Suppressor=0
+/Game/Weapons/SA58/M_SA58_BLK/Thor_PSR_Muzzlebrake.Thor_PSR_Muzzlebrake=0
+/Game/Weapons/SA58/s5r58/SA_58_base_rigg5d.SA_58_base_rigg5d=0
+/Game/Weapons/SA58/SA58Base/SA_58_base_rigg4d.SA_58_base_rigg4d=0
+/Game/Weapons/SA58/SK_SA58_Attached.SK_SA58_Attached=0
+/Game/Weapons/SA58/SKEL_SA58_Attached.SKEL_SA58_Attached=1
+/Game/Weapons/AK704/PHYS_AK704.PHYS_AK704=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -5591,7 +5600,6 @@ DisplayActorsCount=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
-bShowGrid=False
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2013
@@ -6149,7 +6157,7 @@ TakeRecorderMicrophoneAudioManager=InputSettings.Bindings.ActionMappings,InputSe
 MovieSceneAnimationTrackRecorderEditorSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.WeaponDrop,InputSettings.Bindings.ActionMappings.PrimaryWeapon,InputSettings.Bindings.ActionMappings.SecondaryWeapon,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MouseWheel,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.FireAxis,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
 TakeRecorderWorldSourceSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.WeaponDrop,InputSettings.Bindings.ActionMappings.PrimaryWeapon,InputSettings.Bindings.ActionMappings.SecondaryWeapon,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.MouseWheel,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.FireAxis,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeSpatialHash=
 StaticMeshActor=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 LandscapeStreamingProxy=BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,SphereComponent.Collision.Collision
 SphereComponent=
