Add: attachments organized in modular way

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -187,16 +187,25 @@ LastLevel=/Game/Levels/Opalseed
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -204,19 +213,13 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
 OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Pickup_Weapon_SA58.BP_Pickup_Weapon_SA58
 OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_SA58.BP_Weapon_SA58
 OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_AK704.BP_Weapon_AK704
+OpenAssetsAtExit=/Game/Weapons/SA58/SK_SA58.SK_SA58
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -3436,7 +3439,7 @@ UNR=../../../../../../Users/bryanat/Documents/Unreal Projects/cashu_devbranch/Co
 BRUSH=../../../../../../Users/bryanat/Documents/Unreal Projects/cashu_devbranch/Content/
 FBX=../../../../../../Users/bryanat/Documents/Unreal Projects/cashu_devbranch/Content/
 FBXAnim=../../../../../../Users/bryanat/Documents/Unreal Projects/cashu_devbranch/Content/
-GenericImport=../../../../../../Users/bryanat/Documents/uassets/Rifle_BUNDLE/tactical-modular-assault-rifle-ds-arms-sa-58-fal/separated_FBX/ammo_7.62_m993/ammo_762_m993.fbx
+GenericImport=../../../../../../Users/bryanat/Documents/uassets/Rifle_BUNDLE/tactical-modular-assault-rifle-ds-arms-sa-58-fal/separated_FBX/Geissele_scope_mount_with_RMR_redDOT/Geissele_scope_mount_with_RMR_redDOT.fbx
 GenericExport=../../../../../../Users/bryanat/Documents/uassets/Rifle_BUNDLE/tactical-modular-assault-rifle-fn-scar-l-mk-16/Autodesk_FBX/SK_AmericanRifle_Mesh.FBX
 GenericOpen=../../../../../../Users/bryanat/Documents/Unreal Projects/cashu_devbranch/Content/
 GenericSave=../../../../../../Users/bryanat/Documents/Unreal Projects/cashu_devbranch/Content/
@@ -4531,34 +4534,36 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Weapons/Foregrip/SM_Foregrip_BCMGunfighter
-MRUItem1=/Game/Weapons/Foregrip/SM_Foregrip_HK
-MRUItem2=/Game/Weapons/Sight/SM_Sight_Reddot_Romeo8t
-MRUItem3=/Game/Weapons/Sight/SM_Sight_Scope_Bravo4
-MRUItem4=/Game/Weapons/SA58/M_SA58/Thor_PSR_Suppressor
-MRUItem5=/Game/Weapons/SA58/M_SA58/Geissele_scope_mount_with_RMR_redDOT
-MRUItem6=/Game/Weapons/SA58/M_SA58/Thor_PSR_Muzzlebrake
-MRUItem7=/Game/Weapons/SA58/M_SA58/sa_58_receiver
-MRUItem8=/Game/Weapons/SA58/M_SA58/sa_58_charging_handle
-MRUItem9=/Game/Weapons/SA58/M_SA58/sa_58_buttstock_BRS_adapter
-MRUItem10=/Game/Weapons/SA58/M_SA58/sa_58_buttstock_BRS
-MRUItem11=/Game/Weapons/Barrel/SM_SCARL_Barrel_14point5inches
-MRUItem12=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_AK704
-MRUItem13=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_SA58
-MRUItem14=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Pickup_Weapon_SA58
-MRUItem15=/Game/Weapons/Stock/SM_SCARL_Buttstock
-MRUItem16=/Game/Weapons/Ammo/SM_Ammo_556_M855A1
-MRUItem17=/Game/Weapons/Ammo/SM_Ammo_762_BP
-MRUItem18=/Game/Weapons/Ammo/SM_Ammo_763_M993
-MRUItem19=/Game/Weapons/SA58/SK_SA58_Attached
-MRUItem20=/Game/Weapons/SA58/SK_SA58
-MRUItem21=/Game/Weapons/AK704/PHYS_AK704
-MRUItem22=/Game/Weapons/AK704/SK_AK704
-MRUItem23=/Game/Weapons/SA58/PHYS_SA58
-MRUItem24=/Game/Weapons/SA58/SKEL_SA58_Attached
-MRUItem25=/Game/Weapons/SA58/SKEL_SA58
-MRUItem26=/Game/Weapons/SA58/PHYS_SA58_Attached
-MRUItem27=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_AmericanRifle
+MRUItem0=/Game/Weapons/Sight/Geissele_scope_mount_with_RMR_redDOT
+MRUItem1=/Game/Weapons/Sight/M_Sight_Scope_Mount_Geissele_with_RMR_Reddot/M_Sight_Scope_Mount_Geissele_with_RMR_Reddot
+MRUItem2=/Game/Weapons/Sight/optic_EOTech_Vudu
+MRUItem3=/Game/Weapons/Stock/M_SA58_stock_BRS/M_SA58_stock_BRS
+MRUItem4=/Game/Weapons/Stock/M_SA58_stock_BRS/M_SA58_stock_BRS_adapter
+MRUItem5=/Game/Weapons/Stock/SM_SA58_stock_BRS
+MRUItem6=/Game/Weapons/Foregrip/SM_Foregrip_MagpulRVG
+MRUItem7=/Game/Weapons/SA58/M_SA58/M_SA58_Receiver_Charginghandle
+MRUItem8=/Game/Weapons/SA58/M_SA58/M_SA58_Receiver
+MRUItem9=/Game/Weapons/Pistolgrip/SM_Pistolgrip_Fabdefense
+MRUItem10=/Game/Weapons/SA58/SK_SA58
+MRUItem11=/Game/Weapons/Muzzle/SM_Muzzle_Silencer_WAWE_QD
+MRUItem12=/Game/Weapons/Muzzle/SM_Muzzle_Silencer_Thor_PSR
+MRUItem13=/Game/Weapons/Muzzle/SM_Muzzle_Silencer_AAC_SDN
+MRUItem14=/Game/Weapons/Muzzle/M_Muzzle_Silencer_Thor_PSR/M_Muzzle_Silencer_Thor_PSR
+MRUItem15=/Game/Weapons/Muzzle/M_Muzzle_Silencer_Thor_PSR/M_Muzzle_Muzzlebrake_Thor_PSR
+MRUItem16=/Game/Weapons/Magazine/SM_Magazine_50_XDrum
+MRUItem17=/Game/Weapons/Magazine/SM_Magazine_30_BLK
+MRUItem18=/Game/Weapons/Magazine/SM_Magazine_30_FDE
+MRUItem19=/Game/Weapons/Stock/stock_magpul_zhukov
+MRUItem20=/Game/Weapons/Stock/SM_SCARL_Stock
+MRUItem21=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_AK704
+MRUItem22=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_SA58
+MRUItem23=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Pickup_Weapon_SA58
+MRUItem24=/Game/Weapons/Foregrip/SM_Foregrip_BCMGunfighter
+MRUItem25=/Game/Weapons/Foregrip/SM_Foregrip_HK
+MRUItem26=/Game/Weapons/Sight/SM_Sight_Reddot_Romeo8t
+MRUItem27=/Game/Weapons/Sight/SM_Sight_Scope_Bravo4
+MRUItem28=/Game/Weapons/Barrel/SM_SCARL_Barrel_14point5inches
+MRUItem29=/Game/Weapons/Ammo/SM_Ammo_556_M855A1
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -4573,7 +4578,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Weapons/AK704/M_AK704
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -4597,7 +4602,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Weapons/Muzzle
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -4616,7 +4621,7 @@ ContentBrowserTab2.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab2.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab2.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab2.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab2.SelectedPaths=/Game/Weapons
+ContentBrowserTab2.SelectedPaths=/Game/Weapons/Sight
 ContentBrowserTab2.PluginFilters=
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.SelectedCollections=
@@ -4794,7 +4799,7 @@ PrimitiveComponent="\"Object\" "
 SphereComponent="\"Object\" "
 BrushComponent="\"Object\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
-StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
+StreamableRenderAsset="\"Object\" "
 AssetViewerSettings="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
@@ -4992,7 +4997,7 @@ BP_Weapon_Pickup_SA58FAL_C="\"Object.WeaponVars.WeaponStats\" "
 BP_Pickup_Weapon_SA58_C="\"Object.WeaponVars.WeaponStats\" "
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=FBXImport
 
 [WidgetTemplatesExpanded]
 Audio=False
@@ -5546,6 +5551,16 @@ TreeViewWidth=0.300000
 /Game/Weapons/SA58/SK_SA58_Attached_Cost.SK_SA58_Attached_Cost=0
 /Game/Weapons/Sight/SM_Sight_Reddot_ROMEO8T_BLK.SM_Sight_Reddot_ROMEO8T_BLK=1
 /Game/Weapons/Barrel/SM_SCARL_Barrel.SM_SCARL_Barrel=1
+/Game/Weapons/Magazine/SM_Magazine_30_FDE.SM_Magazine_30_FDE=1
+/Game/Weapons/Magazine/SM_Magazine_30_BLK.SM_Magazine_30_BLK=1
+/Game/Weapons/Magazine/SM_Magazine_50_XDrum.SM_Magazine_50_XDrum=1
+/Game/Weapons/Muzzle/M_Muzzle_Silencer_Thor_PSR/M_Muzzle_Silencer_Thor_PSR.M_Muzzle_Silencer_Thor_PSR=1
+/Game/Weapons/Muzzle/SM_Muzzle_Silencer_AAC_SDN.SM_Muzzle_Silencer_AAC_SDN=0
+/Game/Weapons/Muzzle/SM_Muzzle_Silencer_Thor_PSR.SM_Muzzle_Silencer_Thor_PSR=0
+/Game/Weapons/Muzzle/SM_Muzzle_Silencer_WAWE_QD.SM_Muzzle_Silencer_WAWE_QD=0
+/Game/Weapons/Pistolgrip/SM_Pistolgrip_Fabdefense.SM_Pistolgrip_Fabdefense=1
+/Game/Weapons/Sight/optic_EOTech_Vudu.optic_EOTech_Vudu=0
+/Game/Weapons/Sight/Geissele_scope_mount_with_RMR_redDOT.Geissele_scope_mount_with_RMR_redDOT=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
