Multiply: MK47 material color balanced

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -188,44 +188,34 @@ CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=PhysicsAssetEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SoundCueEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=
 RecentAssetEditors=MaterialInstanceEditor
-OpenAssetsAtExit=/Game/Weapons/MK47/first/MK47_mutant_GroupedPart.MK47_mutant_GroupedPart
-OpenAssetsAtExit=/Game/Weapons/MK47/first/magazine_pmag30_genM3.magazine_pmag30_genM3
-OpenAssetsAtExit=/Game/Weapons/MK47/first/mechanical_sight_kriss.mechanical_sight_kriss
-OpenAssetsAtExit=/Game/Weapons/MK47/first/MK47_receiver.MK47_receiver
-OpenAssetsAtExit=/Game/Weapons/MK47/first/pistol_grip_MOE.pistol_grip_MOE
-OpenAssetsAtExit=/Game/Weapons/MK47/first/rifle_scope_HAMR.rifle_scope_HAMR
-OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Pickup_Weapon_MK47.BP_Pickup_Weapon_MK47
-OpenAssetsAtExit=/Game/Weapons/MK47/first/stock_CMMG.stock_CMMG
-OpenAssetsAtExit=/Game/Weapons/MK47/first/suppressor_KAC_PRS.suppressor_KAC_PRS
-OpenAssetsAtExit=/Game/Weapons/MK47/first/tactical_grip_magpul_AFG.tactical_grip_magpul_AFG
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -4689,30 +4679,30 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Weapons/SCARL/M_SCARL/M_SCARL_Receiver_Lower_BLK
-MRUItem1=/Game/Weapons/SCARL/M_SCARL/M_SCARL_Receiver_Upper_BLK
-MRUItem2=/Game/Weapons/SCARL/SK_SCARL_BLK
-MRUItem3=/Game/Weapons/MK47/first/red_dot_sight_deltapoint_lens
-MRUItem4=/Game/Weapons/MK47/first/tactical_grip_magpul_AFG
-MRUItem5=/Game/Weapons/MK47/first/suppressor_KAC_PRS
-MRUItem6=/Game/Weapons/MK47/first/stock_CMMG
-MRUItem7=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_MK47
-MRUItem8=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Pickup_Weapon_MK47
-MRUItem9=/Game/Weapons/MK47/first/rifle_scope_HAMR
-MRUItem10=/Game/Weapons/MK47/first/pistol_grip_MOE
-MRUItem11=/Game/Weapons/MK47/first/MK47_receiver
-MRUItem12=/Game/Weapons/MK47/first/mechanical_sight_kriss
-MRUItem13=/Game/Weapons/MK47/first/magazine_pmag30_genM3
-MRUItem14=/Game/Weapons/MK47/first/MK47_mutant_GroupedPart
-MRUItem15=/Game/hu/Meshes/FallObjects/BP_Physics_StaticMeshKnockover
-MRUItem16=/Game/Weapons/MK47/first/rifle_scope_HAMR_reticle
-MRUItem17=/Game/Weapons/MK47/first/rifle_scope_HAMR_lens_2
-MRUItem18=/Game/Weapons/MK47/first/rifle_scope_HAMR_lens_1
-MRUItem19=/Game/Weapons/MK47/first/red_dot_sight_deltapoint_reticle
-MRUItem20=/Game/Weapons/MK47/first/MK47_handguard
-MRUItem21=/Game/Weapons/MK47/first/ammo_762_BP
-MRUItem22=/Game/Weapons/MK47/first/MK47_mutant_GroupedPart_Skeleton
-MRUItem23=/Game/Weapons/MK47/first/MK47_mutant_GroupedPart_PhysicsAsset
+MRUItem0=/Game/Weapons/MK47/M_MK47/tactical_grip_magpul_AFG
+MRUItem1=/Game/Weapons/MK47/M_MK47/suppressor_KAC_PRS
+MRUItem2=/Game/Weapons/MK47/M_MK47/stock_CMMG
+MRUItem3=/Game/Weapons/MK47/M_MK47/rifle_scope_HAMR_reticle
+MRUItem4=/Game/Weapons/MK47/M_MK47/rifle_scope_HAMR_lens_2
+MRUItem5=/Game/Weapons/MK47/M_MK47/rifle_scope_HAMR_lens_1
+MRUItem6=/Game/Weapons/MK47/M_MK47/rifle_scope_HAMR
+MRUItem7=/Game/Weapons/MK47/M_MK47/red_dot_sight_deltapoint_reticle
+MRUItem8=/Game/Weapons/MK47/M_MK47/red_dot_sight_deltapoint_lens
+MRUItem9=/Game/Weapons/MK47/M_MK47/pistol_grip_MOE
+MRUItem10=/Game/Weapons/MK47/M_MK47/MK47_receiver
+MRUItem11=/Game/Weapons/MK47/M_MK47/MK47_handguard
+MRUItem12=/Game/Weapons/MK47/M_MK47/mechanical_sight_kriss
+MRUItem13=/Game/Weapons/MK47/M_MK47/magazine_pmag30_genM3
+MRUItem14=/Game/Weapons/MK47/M_MK47/ammo_762_BP
+MRUItem15=/Game/Weapons/MK47/SK_MK47_Attached
+MRUItem16=/Game/Weapons/MK47/SKEL_MK47_Attached
+MRUItem17=/Game/Weapons/MK47/PHYS_MK47_Attached
+MRUItem18=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Pickup_Weapon_MK47
+MRUItem19=/Game/Weapons/SCARL/M_SCARL/M_SCARL_Receiver_Lower_BLK
+MRUItem20=/Game/Weapons/SCARL/M_SCARL/M_SCARL_Receiver_Upper_BLK
+MRUItem21=/Game/Weapons/SCARL/SK_SCARL_BLK
+MRUItem22=/Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_MK47
+MRUItem23=/Game/hu/Meshes/FallObjects/BP_Physics_StaticMeshKnockover
 MRUItem24=/Game/hu/Meshes/FallObjects/Sounds/SFX_Wood_Fall
 MRUItem25=/Game/hu/Meshes/FallObjects/Sounds/SFA_SoundAttenuationSetting_SoundDistance
 MRUItem26=/Game/hu/Meshes/FallObjects/BP_floortest
@@ -4733,7 +4723,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Weapons/MK47/first
+ContentBrowserDrawer.SelectedPaths=/Game/Weapons
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -4776,7 +4766,7 @@ ContentBrowserTab2.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab2.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab2.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab2.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab2.SelectedPaths=/Game/hu/Meshes/FallObjects/M_Plywood_vf1oairg/GoldPaintcanTextures
+ContentBrowserTab2.SelectedPaths=/Game
 ContentBrowserTab2.PluginFilters=
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.SelectedCollections=
@@ -5782,6 +5772,7 @@ TreeViewWidth=0.300000
 /Game/bodycamFPSkit/Blueprints/Weapons/AmericanRifle/BP_Weapon_MK47.BP_Weapon_MK47=1
 /Game/Weapons/SCARL/M_SCARL/M_SCARL_Receiver_Upper_BLK.M_SCARL_Receiver_Upper_BLK=0
 /Game/Weapons/SCARL/M_SCARL/M_SCARL_Receiver_Lower_BLK.M_SCARL_Receiver_Lower_BLK=0
+/Game/Weapons/MK47/SK_MK47_Attached.SK_MK47_Attached=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -5846,7 +5837,6 @@ DisplayActorsCount=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
-bShowGrid=False
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2013
